--- a/base/templates/base/task_confirm_delete.html
+++ b/base/templates/base/task_confirm_delete.html
@@ -1,6 +1,18 @@
-<a href="{% url 'tasklist' %}">Go back</a>
-<form method="POST">
-    {% csrf_token %}
-    <p>Are you sure you want to delete this task? "{{delete}}"</p>
-    <input type="submit" value="Delete"/>
-</form>
+{% extends 'base/base.html' %}
+{% block content %}
+
+<div class="header-bar">
+    <a href="{% url 'tasklist' %}">&#8592; Go Back</a>
+</div>
+
+<div class="card-body">
+    <form method="POST">
+        {% csrf_token %}
+        <p>Are your sure you want to delete this task? <b>"{{delete}}"</b> </p>
+        <input class="button" type="submit" value="Delete" />
+    </form>
+</div>
+
+
+
+{% endblock content %}
