--- a/base/templates/base/task_form.html
+++ b/base/templates/base/task_form.html
@@ -1,8 +1,18 @@
-<h3>Task Form</h3>
-<a href="{% url 'tasklist' %}">Go back</a>
+{% extends 'base/base.html' %}
+{% block content %}
 
-<form method="POST" action="">
-    {% csrf_token %}
-    {{form.as_p}}
-    <input type="submit" value="Submit"/>
-</form>
+<div class="header-bar">
+    <a href="{% url 'tasklist' %}">&#8592; Back</a>
+</div>
+
+
+<div class="card-body">
+    <form method="POST" action="">
+        {% csrf_token %}
+        {{form.as_p}}
+        <input class="button" type="submit" value="Submit">
+    </form>
+</div>
+
+
+{% endblock content %}
